--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 # Replace with your DB credentials!
 DATABASE_URL="postgres://user:password@host:port/db-name"
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_CALLBACK=""
