--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"arctic": "^3.7.0",
 		"dotenv": "^17.2.0",
 		"drizzle-orm": "^0.44.3",
 		"postgres": "^3.4.7"
