adjust project settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
 		"source.organizeImports": "never",
 		"source.sortImports": "never",
 		"source.fixAll.ts": "never"
-	}
+	},
+	"files.associations": {
+		"*.css": "tailwindcss"
+	},
+	"editor.formatOnSave": false
 }
