--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DATABASE_URL="postgres://user:password@host:port/db-name"
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 GOOGLE_CALLBACK=""
+
+N8N_CHATBOT_URL=""
+N8N_CHATBOT_KEY=""
