--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/kit": "^2.25.2",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
+		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.11",
 		"@types/node": "^24.1.0",
 		"@vitest/browser": "^3.2.4",
@@ -62,6 +63,7 @@
 		"arctic": "^3.7.0",
 		"dotenv": "^17.2.0",
 		"drizzle-orm": "^0.44.3",
+		"marked": "^16.1.1",
 		"postgres": "^3.4.7"
 	},
 	"pnpm": {
