--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"svelte": "^5.36.14",
 		"svelte-check": "^4.3.0",
+		"sveltekit-sse": "^0.14.1",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.1.11",
