--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
 		"dotenv": "^17.2.0",
 		"drizzle-orm": "^0.44.3",
 		"marked": "^16.1.1",
-		"postgres": "^3.4.7"
+		"postgres": "^3.4.7",
+		"select-philippines-address": "^1.0.6"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
