improve listings page 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
 	"editor.codeActionsOnSave": {
-		"source.organizeImports": "never",
-		"source.sortImports": "never",
-		"source.fixAll.ts": "never"
+		// "source.organizeImports": "never",
+		// "source.sortImports": "never",
+		// "source.fixAll.ts": "never"
 	},
 	"files.associations": {
 		"*.css": "tailwindcss"
 	},
-	"editor.formatOnSave": false
+	// "editor.formatOnSave": false
 }
