--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.11",
+		"@types/leaflet": "^1.9.20",
 		"@types/node": "^24.1.0",
 		"@vitest/browser": "^3.2.4",
 		"bits-ui": "^2.8.11",
@@ -64,6 +65,7 @@
 		"arctic": "^3.7.0",
 		"dotenv": "^17.2.0",
 		"drizzle-orm": "^0.44.3",
+		"leaflet": "^1.9.4",
 		"marked": "^16.1.1",
 		"postgres": "^3.4.7",
 		"select-philippines-address": "^1.0.6"
