--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
 		"leaflet": "^1.9.4",
 		"marked": "^16.1.1",
 		"postgres": "^3.4.7",
-		"select-philippines-address": "^1.0.6"
+		"select-philippines-address": "^1.0.6",
+		"smtp2go-nodejs": "^0.3.5"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
